--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,12 +31,13 @@ dependencies:
   hive: ^2.0.4
   hive_flutter: ^1.1.0
   intl: ^0.17.0
+  fl_chart: ^0.40.0
+  flutter_icons: ^1.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   import_sorter: ^4.6.0
-  shared_preferences: ^2.0.7
   build_runner: ^2.1.2
   hive_generator: ^1.1.1
 
